--- a/.github/workflows/knit-rmd.yml
+++ b/.github/workflows/knit-rmd.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up R
       uses: r-lib/actions/setup-r@v2
       with:
-        r-version: '4.3.0' # Specify R version
+        r-version: '4.4.3' # Specify R version
 
     - name: Install R Dependencies
       uses: r-lib/actions/setup-r-dependencies@v2
@@ -31,15 +31,15 @@ jobs:
 
     - name: Knit Rmd to HTML
       run: |
-        Rscript -e "rmarkdown::render('report.Rmd', output_file = 'report.html')"
+        Rscript -e "rmarkdown::render('CR_Copulas.Rmd', output_file = 'CR_Copulas.html')"
       shell: bash
 
     - name: Commit Rendered Output
       run: |
         git config --local user.email "github-actions[bot]@users.noreply.github.com"
         git config --local user.name "github-actions[bot]"
-        git add report.html
-        git commit -m "Auto-knit report.Rmd to HTML" || echo "No changes to commit"
+        git add CR_Copulas.html
+        git commit -m "Auto-knit CR_Copulas.Rmd to HTML" || echo "No changes to commit"
         git push
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
