--- a/.github/workflows/knit-rmd.yml
+++ b/.github/workflows/knit-rmd.yml
@@ -1,4 +1,4 @@
-name: Knit R Markdown and Deploy to GitHub Pages
+name: Knit R Markdown and Update Docs
 
 on:
   push:
@@ -46,15 +46,16 @@ jobs:
       # Copy style.css to docs/
       - name: Copy CSS
         run: |
-          cp style.css docs/
+          cp style.css docs/ || echo "style.css not found, skipping copy"
         shell: bash
-        continue-on-error: true # Continue if style.css is missing to avoid workflow failure
 
-      # Deploy to GitHub Pages
-      - name: Deploy to GitHub Pages
-        uses: peaceiris/actions-gh-pages@v4
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs
-          publish_branch: main
-          keep_files: true # Preserve existing files in docs/
+      # Commit and push docs/ changes to main
+      - name: Commit Rendered Output
+        run: |
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+          git add docs/
+          git commit -m "Auto-knit CR_Copulas.Rmd to HTML and update docs/" || echo "No changes to commit"
+          git push origin main
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
